--- a/.github/workflows/Build-OnePlus-Kernel.yml
+++ b/.github/workflows/Build-OnePlus-Kernel.yml
@@ -135,14 +135,14 @@ jobs:
             patch -p1 --forward < 10_enable_susfs_for_ksu.patch || true
             cp ../../kernel_patches/mksu_susfs.patch ../KernelSU/
             patch -p1 < mksu_susfs.patch || true
-          elif [[ "${{ github.event.inputs.kernelsu_variant }}" == "Next"]]; then
+          elif [[ "${{ github.event.inputs.kernelsu_variant }}" == "Next" ]]; then
             cd ..
             git clone -b next-susfs https://github.com/KernelSU-Next/KernelSU-Next.git
             cd ./kernel_platform/KernelSU-Next
             cp ../../KernelSU-Next/kernel -r ./
             #cp ../../kernel_patches/KernelSU-Next-Implement-SUSFS-v1.5.5-Universal.patch ./
             #patch -p1 --forward < KernelSU-Next-Implement-SUSFS-v1.5.5-Universal.patch || true
-          elif [[ "${{ github.event.inputs.kernelsu_variant }}" == "MKSU" ]); then
+          elif [[ "${{ github.event.inputs.kernelsu_variant }}" == "MKSU" ]]; then
             cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./KernelSU/
             cd ./KernelSU
             patch -p1 --forward < 10_enable_susfs_for_ksu.patch || true
