--- a/.github/workflows/Build-OnePlus-Kernel.yml
+++ b/.github/workflows/Build-OnePlus-Kernel.yml
@@ -138,8 +138,8 @@ jobs:
           elif [[ "${{ github.event.inputs.kernelsu_variant }}" == "Next" ]]; then
             cd ..
             git clone -b next-susfs https://github.com/KernelSU-Next/KernelSU-Next.git
+            cd kernel_platform
             ls
-            cd kernel_platform/KernelSU-Next
             cp ../../KernelSU-Next/kernel -r ./
             #cp ../../kernel_patches/KernelSU-Next-Implement-SUSFS-v1.5.5-Universal.patch ./
             #patch -p1 --forward < KernelSU-Next-Implement-SUSFS-v1.5.5-Universal.patch || true
