--- a/.github/workflows/Build-OnePlus-Kernel.yml
+++ b/.github/workflows/Build-OnePlus-Kernel.yml
@@ -106,18 +106,27 @@ jobs:
               echo "BRANCH=-s next" >> $GITHUB_ENV
           fi
 
-      - name: Add KSU& MKSU& KSUN& RKSU
+      - name: Add KernelSU
+         if "${{ github.event.inputs.kernelsu_version }}" == "Official"
+        run: | 
+           cd kernel_workspace/kernel_platform 
+           curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash ${{ env.BRANCH }}
+      - name: Add KernelSU-Next
+         if "${{ github.event.inputs.kernelsu_version }}" == "Next"
         run: |
-          cd kernel_workspace/kernel_platform 
-          if [[ "${{ github.event.inputs.kernelsu_version }}" == "Official" ]]; then
-            curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash ${{ env.BRANCH }}
-          elif [[ "${{ github.event.inputs.kernelsu_version }}" == "Next" ]]; then
-            curl -LSs "https://raw.githubusercontent.com/rifsxd/KernelSU-Next/next/kernel/setup.sh" | bash ${{ env.BRANCH }}
-          elif [[ "${{ github.event.inputs.kernelsu_version }}" == "MKSU" ]]; then
-            curl -LSs "https://raw.githubusercontent.com/5ec1cff/KernelSU/main/kernel/setup.sh" | bash ${{ env.BRANCH }}
-          elif [[ "${{ github.event.inputs.kernelsu_version }}" == "RKSU" ]]; then
-            curl -LSs "https://raw.githubusercontent.com/5ec1cff/KernelSU/main/kernel/setup.sh" | bash ${{ env.BRANCH }}
-          fi
+             cd kernel_workspace/kernel_platform
+             curl -LSs "https://raw.githubusercontent.com/rifsxd/KernelSU-Next/next/kernel/setup.sh" | bash ${{ env.BRANCH }}
+      - name:
+         if "${{ github.event.inputs.kernelsu_version }}" == "MKSU"
+        run: |
+             cd kernel_workspace/kernel_platform
+             curl -LSs "https://raw.githubusercontent.com/5ec1cff/KernelSU/main/kernel/setup.sh" | bash ${{ env.BRANCH }}
+      - name: 
+         if "${{ github.event.inputs.kernelsu_version }}" == "RKSU"
+        run: |
+            cd kernel_workspace/kernel_platform
+            curl -LSs "https://raw.githubusercontent.com/rsuntk/KernelSU/main/kernel/setup.sh" | bash ${{ env.BRANCH }}
+
           
       - name: Add SUSFS Patches 
         if: ${{ github.event.inputs.SUSFS_ENABLED == 'true' }}
