--- a/.github/workflows/Build-OnePlus-Kernel.yml
+++ b/.github/workflows/Build-OnePlus-Kernel.yml
@@ -107,22 +107,22 @@ jobs:
           fi
 
       - name: Add KernelSU
-         if "${{ github.event.inputs.kernelsu_version }}" == "Official"
+        if: ${{ github.event.inputs.kernelsu_variant == 'Official' }}
         run: | 
            cd kernel_workspace/kernel_platform 
            curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash ${{ env.BRANCH }}
       - name: Add KernelSU-Next
-         if "${{ github.event.inputs.kernelsu_version }}" == "Next"
+        if: ${{ github.event.inputs.kernelsu_variant == 'Next' }}
         run: |
              cd kernel_workspace/kernel_platform
              curl -LSs "https://raw.githubusercontent.com/KernelSU-Next/KernelSU-Next/next/kernel/setup.sh" | bash ${{ env.BRANCH }}
       - name: Add MKSU
-         if "${{ github.event.inputs.kernelsu_version }}" == "MKSU"
+        if: ${{ github.event.inputs.kernelsu_variant == 'MKSU' }}
         run: |
              cd kernel_workspace/kernel_platform
              curl -LSs "https://raw.githubusercontent.com/5ec1cff/KernelSU/main/kernel/setup.sh" | bash ${{ env.BRANCH }}
       - name: Add RKSU
-         if "${{ github.event.inputs.kernelsu_version }}" == "RKSU"
+        if: ${{ github.event.inputs.kernelsu_variant == 'RKSU' }}
         run: |
             cd kernel_workspace/kernel_platform
             curl -LSs "https://raw.githubusercontent.com/rsuntk/KernelSU/main/kernel/setup.sh" | bash ${{ env.BRANCH }}
@@ -157,7 +157,7 @@ jobs:
             patch -p1 --forward < 10_enable_susfs_for_ksu.patch || true
             cp ../../kernel_patches/mksu_susfs.patch ../KernelSU/
             patch -p1 < mksu_susfs.patch
-            cp ../../kernel_patches/fix.patch ./KernelSU/
+            cp ../../kernel_patches/fix.patch ../KernelSU/
             patch -p1 < fix.patch
           elif [[ "${{ github.event.inputs.kernelsu_variant }}" == "RKSU" ]]; then
             cd ..
