--- a/.github/workflows/Build-OnePlus-Kernel.yml
+++ b/.github/workflows/Build-OnePlus-Kernel.yml
@@ -231,8 +231,8 @@ jobs:
           cp ../susfs4ksu/kernel_patches/fs/* ./common/fs/
           cp ../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
           cd ./KernelSU
-          cp ./patch/MKSU-SKN_susfs.patch
-          patch -p1 -F 3 < MKSU-SKN_susfs.patch
+          cp ./patch/MKSU-SKN_susfs.patch ./
+          patch -p1 -F 3 < MKSU-SKN_susfs.patch 
           cd ../common
           patch -p1 < 50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch || true
           cp ../../kernel_patches/hooks/new_hooks.patch ./
