--- a/.github/workflows/Build-OnePlus-Kernel.yml
+++ b/.github/workflows/Build-OnePlus-Kernel.yml
@@ -286,9 +286,11 @@ jobs:
           if [[ "${{ github.event.inputs.kernelsu_variant }}" == "Next" ]]; then
             cd kernel_workspace/kernel_platform/KernelSU-Next 
             sed -i "s/DKSU_VERSION=11998/DKSU_VERSION=${{ github.event.inputs.KERNEL_VER }}/" kernel/Makefile
+            echo "KSUVER=${{ github.event.inputs.KERNEL_VER }}" >> $GITHUB_ENV
           else
             cd kernel_workspace/kernel_platform/KernelSU
             sed -i "s/DKSU_VERSION=16/DKSU_VERSION=${{ github.event.inputs.KERNEL_VER }}/" kernel/Makefile
+            echo "KSUVER=${{ github.event.inputs.KERNEL_VER }}" >> $GITHUB_ENV
           fi
 
       - name: Add make name
