--- a/.github/workflows/Build-ksunext-PadPro-SUSFS.yml
+++ b/.github/workflows/Build-ksunext-PadPro-SUSFS.yml
@@ -152,6 +152,12 @@ jobs:
           echo "CONFIG_KSU_SUSFS_SUS_SU=n" >> ./common/arch/arm64/configs/gki_defconfig
           sed -i '2s/check_defconfig//' ./common/build.config.gki
 
+      - name: Add make name
+        run: |
+          cd kernel_workspace/kernel_platform
+          sed -i '$s|echo "\$res"|echo "\${{ github.event.inputs.KERNEL_NAME }}"|' ./common/scripts/setlocalversion
+          sed -i "/stable_scmversion_cmd/s/-maybe-dirty//g" ./build/kernel/kleaf/impl/stamp.bzl
+
       - name: Build kernel
         run: |
           cd kernel_workspace
